Refactor GitHub Actions and Terraform configurations for  workload identity management fix

--- a/.github/workflows/google-cloud-run-deploy.yaml
+++ b/.github/workflows/google-cloud-run-deploy.yaml
@@ -12,7 +12,7 @@ on:
           - 'bs-crawler'
 
 env:
-  PROJECT_ID: "Austin-Rent"
+  PROJECT_ID: "austin-rent"
   GAR_LOCATION: "us-central1"
   REGION: 'us-central1'
   REPO: 'image-repo'
