--- a/.github/workflows/flyway-migration.yaml
+++ b/.github/workflows/flyway-migration.yaml
@@ -1,12 +1,20 @@
 name: Flyway Migration
+
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      app_name:
+        description: 'DB to run migrations on'
+        required: true
+        default: 'scraper'
+        type: choice
+        options:
+          - 'scraper'
+
 env:
   PROJECT_ID: 'austin-rent' 
   REGION: 'us-central1'
-  gcp-cloud-sql-instance: 'scraper'
+  gcp-cloud-sql-instance: 'austin-rent-db'
 
 jobs:
   migration:
