--- a/.github/workflows/google-cloud-run-deploy.yaml
+++ b/.github/workflows/google-cloud-run-deploy.yaml
@@ -63,7 +63,6 @@ jobs:
           region: ${{ env.REGION }}
           image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO }}/${{ github.event.inputs.app_name }}:latest
           env_vars: |
-            'ENVIRONMENT=DEV'
-
+            ENVIRONMENT=DEV
       - name: Show Backend URL
         run: echo ${{ steps.deploy.outputs.url }}
