--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -2,6 +2,7 @@ FROM python:3.12 as BUILD
 
 WORKDIR /app
 EXPOSE 8080
+RUN apt-get update && apt-get install -y age
 
 COPY pyproject.toml poetry.lock* /app/
 RUN pip install poetry
