--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,8 +14,8 @@
             "justMyCode": false,
             "python": "/home/vscode/.cache/pypoetry/virtualenvs/bs-crawler-7DgAT4g4-py3.12/bin/python",
             "env": {
-                "ENVIRONMENT":"DEV",
-                "DEBUG_BUILDING_LIMIT":"1",
+                "ENVIRONMENT":"LOCAL",
+                // "DEBUG_BUILDING_LIMIT":"3",
                 "LOGGING_LEVEL": "DEBUG"
             },
             "args": [],
