json extraction and clean up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,12 @@
     "cSpell.words": [
         "crawlee",
         "drivername",
-        "secretmanager"
-    ]
+        "secretmanager",
+        "sightmap"
+    ],
+    "python.testing.pytestArgs": [
+        "scraper"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
