--- a/.github/workflows/flyway-migration.yaml
+++ b/.github/workflows/flyway-migration.yaml
@@ -26,13 +26,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - id: 'auth'
-        name: Google Auth
-        uses: 'google-github-actions/auth@v1'
+      - name: Google Auth
+        id: auth
+        uses: 'google-github-actions/auth@v2'
         with:
-          # token_format: 'access_token' # use for debugging
-          workload_identity_provider: '${{ secrets.WIF_PROVIDER }}'
-          service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}'
+          token_format: 'access_token'
+          workload_identity_provider: '${{ env.WIF_PROVIDER }}'
+          service_account: '${{ env.WIF_SERVICE_ACCOUNT }}'
 
 
       - name: 'Set up Cloud SDK'
