--- a/.github/workflows/flyway-migration.yaml
+++ b/.github/workflows/flyway-migration.yaml
@@ -60,9 +60,11 @@ jobs:
             sleep 0.5 # wait for half a second before checking again
           done
 
+          ls ${{ github.workspace }}/${{github.event.inputs.app_name}}/db-migrations
+
           docker run --network=host --rm \
-          -v ${{ github.workspace }}${{github.event.inputs.app_name}}/db-migrations:/flyway/sql \
-          flyway/flyway:9 \
+          -v ${{ github.workspace }}/${{github.event.inputs.app_name}}/db-migrations:/flyway/sql \
+          flyway/flyway:11 \
           -url=jdbc:postgresql://localhost:5432/postgres \
           -user=scraper_app \
           -password=${{ secrets.SCRAPER_APP_PASSWORD }} \
