--- a/.github/workflows/linter.yaml
+++ b/.github/workflows/linter.yaml
@@ -32,6 +32,8 @@ jobs:
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: dist/**/*
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FIX_SHELL_SHFMT: true
+          FIX_YAML_PRETTIER: true
           # VALIDATE_JAVASCRIPT_STANDARD: false
           # VALIDATE_ALL_CODEBASE: true
           # VALIDATE_JSCPD: false
