--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
-        args: ["--profile", "black"]
+        # args: ["--profile", "black"]
 
   - repo: https://github.com/psf/black
     rev: 24.10.0
@@ -56,7 +56,7 @@ repos:
       - id: python-check-blanket-noqa
 
   - repo: https://github.com/antonbabenko/pre-commit-terraform
-    rev: v1.86.0
+    rev: v1.96.0
     hooks:
       - id: terraform_tflint
       - id: terraform_fmt
