--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     hooks:
       - id: isort
         name: isort (python)
-        # args: ["--profile", "black"]
+        args: ["--profile", "black"]
 
   - repo: https://github.com/psf/black
     rev: 24.10.0
@@ -60,3 +60,4 @@ repos:
     hooks:
       - id: terraform_tflint
       - id: terraform_fmt
+      - id: terraform_trivy
