--- a/.github/workflows/google-cloud-run-deploy.yaml
+++ b/.github/workflows/google-cloud-run-deploy.yaml
@@ -10,6 +10,7 @@ on:
         type: choice
         options:
           - 'scraper'
+          - 'discord-logger'
 
 env:
   PROJECT_ID: "austin-rent"
