--- a/discord-logger/Dockerfile
+++ b/discord-logger/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.23.4-alpine AS build
+FROM golang:1.23.4-alpine AS BUILDER
 WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
@@ -6,12 +6,12 @@ COPY . .
 RUN go build -o main ./src
 
 
-FROM build AS test
-WORKDIR /app/src
-RUN go test -v ./...
+# FROM build AS TEST
+# WORKDIR /app/src
+# RUN go test -v ./...
 
 
-FROM alpine:latest as app
+FROM alpine:latest as BUILD
 WORKDIR /root/
 COPY --from=build /app/main .
 EXPOSE 8080
