--- a/.github/workflows/google-cloud-run-deploy.yaml
+++ b/.github/workflows/google-cloud-run-deploy.yaml
@@ -49,22 +49,18 @@ jobs:
       - name: Build and Push
         run: |-
           cd ${{ github.event.inputs.app_name }}/
-          docker build --target BUILD -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO }}/${{ github.event.inputs.app_name }}:latest" ./
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO }}/${{ github.event.inputs.app_name }}:latest" ./
           docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO }}/${{ github.event.inputs.app_name }}:latest"
 
 
       # END - Docker auth and build
 
-      - name: Deploy Backend to Cloud Run
+      - name: Deploy Job to Cloud Run Jobs
         id: deploy
-        uses: google-github-actions/deploy-cloudrun@v2
-        with:
-          service: ${{ github.event.inputs.app_name }}
-          region: ${{ env.REGION }}
-          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO }}/${{ github.event.inputs.app_name }}:latest
-          flags: '--add-cloudsql-instances=austin-rent:us-central1:austin-rent-db'
-          env_vars: |-
-            ENVIRONMENT=DEV
+        run: |-
+          gcloud run jobs update ${{ github.event.inputs.app_name }} \
+            --image=${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPO }}/${{ github.event.inputs.app_name }}:latest \
+            --region=${{ env.REGION }}
 
-      - name: Show Backend URL
-        run: echo ${{ steps.deploy.outputs.url }}
+      - name: Show Job Name
+        run: echo "Deployed job: ${{ github.event.inputs.app_name }}"
