--- a/scraper/Dockerfile
+++ b/scraper/Dockerfile
@@ -1,13 +1,27 @@
-FROM python:3.12 as BUILD
+FROM python:3.12-slim
 
 WORKDIR /app
 EXPOSE 8080
-RUN apt-get update && apt-get install -y age
 
-COPY pyproject.toml poetry.lock* /app/
-RUN pip install poetry
-RUN poetry install --no-root
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    age \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
+# Install uv
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
+# Copy dependency files first for better layer caching
+COPY pyproject.toml uv.lock /app/
+
+# Install dependencies (without the project itself)
+RUN uv sync --frozen --no-install-project
+
+# Copy the rest of the application
 COPY . /app
 
-ENTRYPOINT ["poetry", "run", "python", "-m", "scraper"]
+# Sync again to install the project
+RUN uv sync --frozen
+
+ENTRYPOINT ["uv", "run", "python", "-m", "scraper"]
